@@ -874,6 +874,14 @@ pointEdit.detectors.negCusumDet=Negative CUSUM detector
 pointEdit.detectors.negCusum=Negative CUSUM
 pointEdit.detectors.negLimit=Negative limit
 pointEdit.detectors.weight=Weight
+pointEdit.detectors.range=Range
+pointEdit.detectors.rangeDet=Range detector
+pointEdit.detectors.rangeHigh=High range limit
+pointEdit.detectors.rangeLow=Low range limit
+pointEdit.detectors.errorParsingHighLimit=Error parsing low range value
+pointEdit.detectors.errorParsingLowLimit=Error parsing high range value
+
+
 
 
 pointEdit.error.missingDataPoint=Missing data point, was it deleted?
@@ -1285,6 +1293,8 @@ event.viconics.messagingException=Messaging error: {0}
 event.viconics.networkOffline=Network is offline
 event.viconics.deviceOffline=Device is offline: {0}
 event.viconics.duplicateCommException=Duplicate comm address detected: {0}
+event.detector.range={0} is between {1} and {2}
+event.detector.rangePeriod={0} has been between {1} and {2} for more than {3}
 
 event.detectorVo.highLimit=When value is higher than {0}
 event.detectorVo.highLimitPeriod=When value is higher than {0} for {1}
@@ -1300,6 +1310,8 @@ event.detectorVo.posCusum=When CUSUM is higher than {0}
 event.detectorVo.posCusumPeriod=When CUSUM is higher than {0} for {1}
 event.detectorVo.negCusum=When CUSUM is lower than {0}
 event.detectorVo.negCusumPeriod=When CUSUM is lower than {0} for {1}
+event.detectorVo.range=When value is between {0} and {1}
+event.detectorVo.rangePeriod=When value is between {0} and {1} for {2}
 
 event.setPoint.targetPointMissing=target point is missing or disabled
 event.setPoint.targetNotSettable=target point is not settable
