@@ -1,0 +1,127 @@
+/**
+ * Copyright (C) 2014 Infinite Automation Software. All rights reserved.
+ * @author Terry Packer
+ */
+package com.serotonin.m2m2.rt.event.detectors;
+
+import com.serotonin.m2m2.i18n.TranslatableMessage;
+import com.serotonin.m2m2.rt.dataImage.PointValueTime;
+import com.serotonin.m2m2.view.text.TextRenderer;
+import com.serotonin.m2m2.vo.event.PointEventDetectorVO;
+
+/**
+ * The AnalogRangeDetector is used to detect occurrences of point values within the given range for a given
+ * duration. For example, a user may need to have an event raised when a temperature is within some range for 10 minutes
+ * or more.
+ * 
+ * This detector overrides the limit (for high end) and weight (for low end) range values thus the range is defined as:
+ * weight <= value <= limit
+ * 
+ *
+ * 
+ * The configuration fields provided are static for the lifetime of this detector. The state fields vary based on the
+ * changing conditions in the system. In particular, the highLimitActive field describes whether the point's value is
+ * currently above the high limit or not. The eventActive field describes whether the point's value has been above the
+ * high limit for longer than the tolerance duration.
+ * 
+ * @author Terry Packer
+ * 
+ */
+public class AnalogRangeDetectorRT extends TimeDelayedEventDetectorRT {
+    /**
+     * State field. Whether the range is currently active or not. This field is used to prevent multiple events
+     * being raised during the duration of a single high limit exceed.
+     */
+    private boolean rangeActive;
+
+    private long rangeActiveTime;
+    private long rangeInactiveTime;
+
+    /**
+     * State field. Whether the event is currently active or not. This field is used to prevent multiple events being
+     * raised during the duration of a single range event.
+     */
+    private boolean eventActive;
+
+    public AnalogRangeDetectorRT(PointEventDetectorVO vo) {
+        this.vo = vo;
+    }
+
+    @Override
+    public TranslatableMessage getMessage() {
+        String name = vo.njbGetDataPoint().getName();
+        String prettyHighRange = vo.njbGetDataPoint().getTextRenderer().getText(vo.getLimit(), TextRenderer.HINT_SPECIFIC);
+        String prettyLowRange = vo.njbGetDataPoint().getTextRenderer().getText(vo.getWeight(), TextRenderer.HINT_SPECIFIC);
+        TranslatableMessage durationDescription = getDurationDescription();
+        if (durationDescription == null)
+            return new TranslatableMessage("event.detector.range", name, prettyLowRange, prettyHighRange);
+        return new TranslatableMessage("event.detector.rangePeriod", name, prettyLowRange, prettyHighRange, durationDescription);
+    }
+
+    @Override
+    protected boolean isEventActive() {
+        return eventActive;
+    }
+
+    /**
+     * This method is only called when the high limit changes between being active or not, i.e. if the point's value is
+     * currently above the high limit, then it should never be called with a value of true.
+     * 
+     * @param b
+     */
+    private void changeRangeActive() {
+    	rangeActive = !rangeActive;
+
+        if (rangeActive)
+            // Schedule a job that will call the event active if it runs.
+            scheduleJob();
+        else
+            unscheduleJob(rangeInactiveTime);
+    }
+
+    @Override
+    synchronized public void pointChanged(PointValueTime oldValue, PointValueTime newValue) {
+        double newDouble = newValue.getDoubleValue();
+        if ((newDouble <= vo.getLimit())&&(newDouble >= vo.getWeight())) {
+            if (!rangeActive) {
+            	rangeActiveTime = newValue.getTime();
+                changeRangeActive();
+            }
+        }
+        else {
+            if (rangeActive) {
+            	rangeInactiveTime = newValue.getTime();
+                changeRangeActive();
+            }
+        }
+    }
+
+    @Override
+    protected long getConditionActiveTime() {
+        return rangeActiveTime;
+    }
+
+    /**
+     * This method is only called when the event changes between being active or not, i.e. if the event currently is
+     * active, then it should never be called with a value of true. That said, provision is made to ensure that the high
+     * limit is active before allowing the event to go active.
+     * 
+     * @param b
+     */
+    @Override
+    synchronized public void setEventActive(boolean b) {
+        eventActive = b;
+        if (eventActive) {
+            // Just for the fun of it, make sure that the high limit is active.
+            if (rangeActive)
+                // Ok, things are good. Carry on...
+                // Raise the event.
+                raiseEvent(rangeActiveTime + getDurationMS(), createEventContext());
+            else
+                eventActive = false;
+        }
+        else
+            // Deactive the event.
+            returnToNormal(rangeInactiveTime);
+    }
+}
