@@ -491,6 +491,48 @@
       </tr>
       <tr><td class="formError" id="eventDetector_TEMPLATE_ErrorMessage" colspan="2"></td></tr>
     </tbody>
+    <tbody id="detectorType<%= PointEventDetectorVO.TYPE_ANALOG_RANGE %>">
+      <tr><td class="horzSeparator" colspan="2"></td></tr>
+      <tr>
+        <td class="formLabelRequired">
+          <tag:img png="delete" title="common.delete" onclick="pointEventDetectorEditor.deleteDetector(getPedId(this))"/>
+          <fmt:message key="pointEdit.detectors.type"/>
+        </td>
+        <td class="formField"><fmt:message key="pointEdit.detectors.rangeDet"/></td>
+      </tr>
+      <tr>
+        <td class="formLabelRequired"><fmt:message key="common.xid"/></td>
+        <td class="formField"><input id="eventDetector_TEMPLATE_Xid" type="text" class="formFullLength"/></td>
+      </tr>
+      <tr>
+        <td class="formLabel"><fmt:message key="pointEdit.detectors.alias"/></td>
+        <td class="formField"><input id="eventDetector_TEMPLATE_Alias" type="text" class="formFullLength"/></td>
+      </tr>
+      <tr>
+        <td class="formLabelRequired"><fmt:message key="common.alarmLevel"/></td>
+        <td class="formField">
+          <tag:alarmLevelOptions id="eventDetector_TEMPLATE_AlarmLevel"
+                  onchange="pointEventDetectorEditor.updateAlarmLevelImage(this.value, getPedId(this))"/>
+          <tag:img id="eventDetector_TEMPLATE_AlarmLevelImg" png="flag_green" title="common.alarmLevel.none" style="display:none;"/>
+        </td>
+      </tr>
+      <tr>
+        <td class="formLabelRequired"><fmt:message key="pointEdit.detectors.rangeLow"/></td>
+        <td class="formField"><input id="eventDetector_TEMPLATE_Weight" type="text" class="formShort"/></td>
+      </tr>
+      <tr>
+        <td class="formLabelRequired"><fmt:message key="pointEdit.detectors.rangeHigh"/></td>
+        <td class="formField"><input id="eventDetector_TEMPLATE_Limit" type="text" class="formShort"/></td>
+      </tr>
+      <tr>
+        <td class="formLabel"><fmt:message key="pointEdit.detectors.duration"/></td>
+        <td class="formField">
+          <input id="eventDetector_TEMPLATE_Duration" type="text" class="formShort"/>
+          <tag:timePeriods id="eventDetector_TEMPLATE_DurationType" s="true" min="true" h="true" d="true"/>
+        </td>
+      </tr>
+      <tr><td class="formError" id="eventDetector_TEMPLATE_ErrorMessage" colspan="2"></td></tr>
+    </tbody>
   </table>
 </div>
 
@@ -627,6 +669,12 @@
               $set("eventDetector"+ detector.id +"DurationType", detector.durationType);
           }
           else if (detector.detectorType == <%= PointEventDetectorVO.TYPE_NEGATIVE_CUSUM %>) {
+              $set("eventDetector"+ detector.id +"Limit", detector.limit);
+              $set("eventDetector"+ detector.id +"Weight", detector.weight);
+              $set("eventDetector"+ detector.id +"Duration", detector.duration);
+              $set("eventDetector"+ detector.id +"DurationType", detector.durationType);
+          }
+          else if (detector.detectorType == <%= PointEventDetectorVO.TYPE_ANALOG_RANGE %>) {
               $set("eventDetector"+ detector.id +"Limit", detector.limit);
               $set("eventDetector"+ detector.id +"Weight", detector.weight);
               $set("eventDetector"+ detector.id +"Duration", detector.duration);
@@ -867,7 +915,27 @@
                               durationType, alarmLevel, saveCB);
                   }
               }
-              
+              else if (pedType == <%= PointEventDetectorVO.TYPE_ANALOG_RANGE %>) {
+                  var limit = parseFloat($get("eventDetector"+ pedId +"Limit"));
+                  var weight = parseFloat($get("eventDetector"+ pedId +"Weight"));
+                  var duration = parseInt($get("eventDetector"+ pedId +"Duration"));
+                  var durationType = parseInt($get("eventDetector"+ pedId +"DurationType"));
+                  
+                  if (isNaN(limit))
+                      errorMessage = "<fmt:message key='pointEdit.detectors.errorParsingHighLimit'/>";
+                  else if (isNaN(weight))
+                      errorMessage = "<fmt:message key='pointEdit.detectors.errorParsingLowLimit'/>";
+                  else if (isNaN(duration))
+                      errorMessage = "<fmt:message key='pointEdit.detectors.errorParsingDuration'/>";
+                  else if (duration < 0)
+                      errorMessage = "<fmt:message key='pointEdit.detectors.invalidDuration'/>";
+                  else {
+                      saveCBCount++;
+                      DataPointEditDwr.updateAnalogRangeDetector(pedId, xid, alias, limit, weight, duration,
+                              durationType, alarmLevel, saveCB);
+                  }
+              }
+
               if (errorMessage != null) {
                   runSaveCallback = false;
                   $("eventDetector"+ pedId +"ErrorMessage").innerHTML = errorMessage;
